Fix horizontal scroll overflow due to header animation
The header is now moved up and outside of the body container, now allowing the header to take up a max of 100% of the viewport width. With overflow set to hidden, the animation will go outside the viewport but won't create a scrollbar anymore.

--- a/_sass/glitch.scss
+++ b/_sass/glitch.scss
@@ -1,6 +1,11 @@
-.stack {
-  display: grid;
-  grid-template-columns: 1fr;
+
+header {
+  max-width: 100vw;
+  .stack {
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 1fr;
+  }
 }
 
 .stack span {
