--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -34,7 +34,7 @@ html {
 }
 
 body {
-  padding: 0 1em;
+  padding: 0;
   font-family: CMU Serif, serif;
   line-height: 1.5;
   background: #0e0e0e;
